# sculpt

./: .gitignore  Cargo.toml  README.md  e  examples.txt  test
deducnat-macro/: Cargo.toml
deducnat-macro/src/: lib.rs
examples/: test.ddn  test.sculpt  type_proto.sculpt
sculpt-macro/: Cargo.toml
sculpt-macro/src/: lib.rs
src/: context.rs  error.rs  formula.lalrpop  inductive.rs  main.rs  parser.lalrpop  parser.rs  proof.rs  repl.rs  rule.rs  sequent.rs  tools.rs
src/engine/: command.rs  engine.rs  mod.rs
src/exec/: exec.rs  mod.rs
src/interpreter/: command.rs  error.rs  interpreter.rs  mod.rs
src/logic/: formula.rs  mod.rs  rule.rs  sequent.rs  term.rs
src/parsing/: formula.lalrpop
src/repl/: command.rs  error.rs  mod.rs  repl.rs
src/syntax/: lexer.rs  mod.rs  parser.lalrpop
